--- a/src/content/docs/en/api/index.mdx
+++ b/src/content/docs/en/api/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "API documentation"
-description: "Adjust API documentation"
-category-title: API documentation
-slug: en/api
+title: "MAX documentation"
+description: "MAX documentation"
+category-title: MAX documentation
+slug: en/max
 type: category
 ---
